Source/WebCore/html/parser/HTMLTokenizer.cpp
@@ -107,8 +107,8 @@ static inline bool isEndTagBufferingState(HTMLTokenizerState::State state)
 #define HTML_ADVANCE_TO(stateName) ADVANCE_TO(HTMLTokenizerState, stateName)
 #define HTML_SWITCH_TO(stateName) SWITCH_TO(HTMLTokenizerState, stateName)
 
-HTMLTokenizer::HTMLTokenizer(bool usePreHTML5ParserQuirks)
-    : m_usePreHTML5ParserQuirks(usePreHTML5ParserQuirks)
+HTMLTokenizer::HTMLTokenizer(const HTMLParserOptions& options)
+    : m_options(options)
 {
     reset();
 }
@@ -343,7 +343,7 @@ bool HTMLTokenizer::nextToken(SegmentedString& source, HTMLToken& token)
             HTML_ADVANCE_TO(SelfClosingStartTagState);
         else if (cc == '>')
             return emitAndResumeIn(source, HTMLTokenizerState::DataState);
-        else if (m_usePreHTML5ParserQuirks && cc == '<')
+        else if (m_options.usePreHTML5ParserQuirks && cc == '<')
             return emitAndReconsumeIn(source, HTMLTokenizerState::DataState);
         else if (isASCIIUpper(cc)) {
             m_token->appendToName(toLowerCase(cc));
@@ -814,7 +814,7 @@ bool HTMLTokenizer::nextToken(SegmentedString& source, HTMLToken& token)
             HTML_ADVANCE_TO(SelfClosingStartTagState);
         else if (cc == '>')
             return emitAndResumeIn(source, HTMLTokenizerState::DataState);
-        else if (m_usePreHTML5ParserQuirks && cc == '<')
+        else if (m_options.usePreHTML5ParserQuirks && cc == '<')
             return emitAndReconsumeIn(source, HTMLTokenizerState::DataState);
         else if (isASCIIUpper(cc)) {
             m_token->addNewAttribute();
@@ -848,7 +848,7 @@ bool HTMLTokenizer::nextToken(SegmentedString& source, HTMLToken& token)
         } else if (cc == '>') {
             m_token->endAttributeName(source.numberOfCharactersConsumed());
             return emitAndResumeIn(source, HTMLTokenizerState::DataState);
-        } else if (m_usePreHTML5ParserQuirks && cc == '<') {
+        } else if (m_options.usePreHTML5ParserQuirks && cc == '<') {
             m_token->endAttributeName(source.numberOfCharactersConsumed());
             return emitAndReconsumeIn(source, HTMLTokenizerState::DataState);
         } else if (isASCIIUpper(cc)) {
@@ -876,7 +876,7 @@ bool HTMLTokenizer::nextToken(SegmentedString& source, HTMLToken& token)
             HTML_ADVANCE_TO(BeforeAttributeValueState);
         else if (cc == '>')
             return emitAndResumeIn(source, HTMLTokenizerState::DataState);
-        else if (m_usePreHTML5ParserQuirks && cc == '<')
+        else if (m_options.usePreHTML5ParserQuirks && cc == '<')
             return emitAndReconsumeIn(source, HTMLTokenizerState::DataState);
         else if (isASCIIUpper(cc)) {
             m_token->addNewAttribute();
@@ -1019,7 +1019,7 @@ bool HTMLTokenizer::nextToken(SegmentedString& source, HTMLToken& token)
             HTML_ADVANCE_TO(SelfClosingStartTagState);
         else if (cc == '>')
             return emitAndResumeIn(source, HTMLTokenizerState::DataState);
-        else if (m_usePreHTML5ParserQuirks && cc == '<')
+        else if (m_options.usePreHTML5ParserQuirks && cc == '<')
             return emitAndReconsumeIn(source, HTMLTokenizerState::DataState);
         else if (cc == InputStreamPreprocessor::endOfFileMarker) {
             parseError();
@@ -1589,7 +1589,7 @@ String HTMLTokenizer::bufferedCharacters() const
     return characters.toString();
 }
 
-void HTMLTokenizer::updateStateFor(const AtomicString& tagName, Frame* frame)
+void HTMLTokenizer::updateStateFor(const AtomicString& tagName)
 {
     if (tagName == textareaTag || tagName == titleTag)
         setState(HTMLTokenizerState::RCDATAState);
@@ -1600,9 +1600,9 @@ void HTMLTokenizer::updateStateFor(const AtomicString& tagName, Frame* frame)
     else if (tagName == styleTag
         || tagName == iframeTag
         || tagName == xmpTag
-        || (tagName == noembedTag && HTMLTreeBuilder::pluginsEnabled(frame))
+        || (tagName == noembedTag && m_options.pluginsEnabled)
         || tagName == noframesTag
-        || (tagName == noscriptTag && HTMLTreeBuilder::scriptEnabled(frame)))
+        || (tagName == noscriptTag && m_options.scriptEnabled))
         setState(HTMLTokenizerState::RAWTEXTState);
 }
 
